--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
     </div>
   </section>
   <footer>
-    <div class="footer_divider"></div>
+    <!-- <div class="footer_divider"></div> -->
     <div class="footer_wrapper">
         <div>
             <div class="footer_social">
