--- a/index.html
+++ b/index.html
@@ -281,8 +281,8 @@
     </div>
   </section>
   <footer>
-    <!-- <div class="footer_divider"></div> -->
-    <!-- <div class="footer_wrapper"> -->
+    <div class="footer_divider"></div>
+    <div class="footer_wrapper">
         <div>
             <div class="footer_social">
                 <a href="#" class="footer_social_item">
@@ -329,7 +329,7 @@
                 </a>
             </div>
         </div>
-    <!-- </div> -->
+    </div>
   </footer>
   <script src="js/script.js">
 
